name: dresdner-verkehrsbetriebe
version: 0.1.0
synopsis: Library and program for querying DVB (Dresdner Verkehrsbetriebe AG)
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Network
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules: Network.Transportation.Germany.DVB
  build-depends:
      base >= 4.7 && < 4.8
    , HTTP >= 4000.2 && < 4000.3
    , time >= 1.4 && < 1.5
  hs-source-dirs: src
  default-language: Haskell2010
